# sheldrake

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  prompts.md  pyproject.toml
.claude/: handoff.md  learnings.md
.claude/conversations/: cryptobiosis-analysis.md  cryptobiosis.md
.claude/plans/: eager-exploring-charm.md  wobbly-doodling-dahl.md
src/pali/: __init__.py  __main__.py  _win32_keys.py  app.py  config.py  inference.py  protocol.py  stream.py  system_prompt.py  widgets.py
src/sheldrake/: __init__.py  __main__.py  app.py  config.py  inference.py  stream.py  system_prompt.py  widgets.py
tests/: conftest.py  test_inference.py  test_protocol.py  test_stream.py
