[project]
name = "sheldrake"
version = "0.1.0"
description = "Palimpsest — Where AI learns to use the backspace key."
requires-python = ">=3.12"
dependencies = [
    "textual>=1.0",
    "anthropic>=0.45",
    "pydantic>=2.0",
    "typer>=0.15",
]

[project.scripts]
sheldrake = "sheldrake.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sheldrake"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "prek>=0.3",
    "ty>=0.0.1a0",
]

[tool.coverage.run]
source = ["sheldrake"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
omit = [
    "src/sheldrake/__main__.py",
    "src/sheldrake/app.py",
    "src/sheldrake/widgets.py",
    "src/sheldrake/_win32_keys.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/sheldrake/_win32_keys.py" = ["C901"]

[tool.ruff.lint.mccabe]
max-complexity = 10
